--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "description": "taro study demo",
   "scripts": {
+    "build": "npm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
     "build:tt": "taro build --type tt",
     "build:h5": "taro build --type h5",
     "build:rn": "taro build --type rn",
+    "dev": "npm run dev:weapp",
     "dev:weapp": "concurrently \"npm run build:weapp -- --watch\" \"npm run mock\"",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
@@ -25,6 +27,7 @@
     "@tarojs/components": "1.2.10",
     "@tarojs/redux": "1.2.10",
     "@tarojs/redux-h5": "1.2.10",
+    "@tarojs/rn-runner": "^1.2.15",
     "@tarojs/router": "1.2.10",
     "@tarojs/taro": "1.2.10",
     "@tarojs/taro-alipay": "1.2.10",
@@ -32,8 +35,8 @@
     "@tarojs/taro-swan": "1.2.10",
     "@tarojs/taro-tt": "1.2.10",
     "@tarojs/taro-weapp": "1.2.10",
-    "nervjs": "^1.3.9",
     "nerv-devtools": "^1.3.9",
+    "nervjs": "^1.3.9",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
